[project]
name = "credit"
version = "0.1.0"
description = "Library analyzing credit and insurance default."
authors = [
    {name = "chu", email = "zh.c.l.z.95@gmail.com"},
]
dependencies = [
    "numpy",
    "jupyter",
    "yfinance",
    "pyarrow",
    "scipy",
    "matplotlib",
    "seaborn",
    "pandas",
    "pybind11>=2.12.0",
    "arch>=7.0.0",
    "beautifulsoup4>=4.12.3",
    "bs4>=0.0.2",
    "nelson-siegel-svensson>=0.5.0",
]
requires-python = "<=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = []
